[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/BaseScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/manaspc.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Menu/game_menu.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="GameMenu" instance=ExtResource( 1 )]
script = ExtResource( 7 )
has_back_button = false

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/CenterContainer" index="0"]
margin_left = 411.0
margin_top = 177.0
margin_right = 612.0
margin_bottom = 423.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Controls/CenterContainer/VBoxContainer" index="0"]
margin_right = 201.0
margin_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Play"
flat = true
align = 0

[node name="ScoreButton" type="Button" parent="Controls/CenterContainer/VBoxContainer" index="1"]
margin_top = 50.0
margin_right = 201.0
margin_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Score"
flat = true
align = 0

[node name="OptionsButton" type="Button" parent="Controls/CenterContainer/VBoxContainer" index="2"]
margin_top = 100.0
margin_right = 201.0
margin_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Options"
flat = true
align = 0

[node name="CreditsButton" type="Button" parent="Controls/CenterContainer/VBoxContainer" index="3"]
margin_top = 150.0
margin_right = 201.0
margin_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Credits"
flat = true
align = 0

[node name="ExitButton" type="Button" parent="Controls/CenterContainer/VBoxContainer" index="4"]
margin_top = 200.0
margin_right = 201.0
margin_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Exit"
flat = true
align = 0
[connection signal="mouse_entered" from="Controls/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Controls/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="Controls/CenterContainer/VBoxContainer/ScoreButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Controls/CenterContainer/VBoxContainer/ScoreButton" to="." method="_on_ScoreButton_pressed"]
[connection signal="mouse_entered" from="Controls/CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Controls/CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="Controls/CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Controls/CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="mouse_entered" from="Controls/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Controls/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
